Fixed title alignment issue

--- a/Page 1/signup.css
+++ b/Page 1/signup.css
@@ -1,9 +1,10 @@
 body {
-    /* background-image: url("../LMS/assets/images.jpg");
+    /* background-image: url("../assets/m.jpg");
     background-repeat: no-repeat;
     background-size: cover; */
     background-color: rgb(218, 252, 224);
     height: max-content;
+    font-family: 'comic sans MS';
 }
 
 .container {
@@ -29,7 +30,7 @@ h1 span {
     margin-top: 215px;
     margin-left: 100%;
     transform-origin: bottom center;
-    font-weight: bolder;
+    font-weight: 100;
     padding: 10px;
 }
 
@@ -57,6 +58,7 @@ h1 {
     float: left;
     width: 50%;
     text-decoration: none;
+    border-radius: 20px 20px 0 0;
     background-color: rgb(171, 221, 173);
     padding: 1em;
 }
@@ -87,15 +89,16 @@ h1 {
 
 .form>label {
     margin: 2px;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .form>input[type="button"] {
     margin-left: 200px;
     margin-top: 20px;
-    background-color: rgb(109, 179, 112);
+    background-color: rgb(148, 231, 152);
     border: 3px solid rgb(5, 58, 38);
     font-weight: bold;
+    font-family: 'comic sans MS';
     width: max-content;
 }
 
